ran prettier across all files
