# schemas/openapi.yaml
@@ -28,7 +28,7 @@ paths:
         schema:
           type: integer
         required: true
-        description: Numeric id of the user
+        description: Numeric id of the user to perform actions against
     description: >
       This reource represents the ability to perform actions on users via their
       ID.
@@ -58,8 +58,15 @@ paths:
           application/json:
             schema:
               type: string
-              enum: 
-                - { "firstName": "newFirstName","lastName": "newLastName","about": "New about me section","password": "newPassword","email": "newemail@example.com","avatarURL": "https://example.com/avatar.png"}
+              enum:
+                - {
+                    "firstName": "newFirstName",
+                    "lastName": "newLastName",
+                    "about": "New about me section",
+                    "password": "newPassword",
+                    "email": "newemail@example.com",
+                    "avatarURL": "https://example.com/avatar.png",
+                  }
       responses:
         "200":
           description: Update confirmation showing a message with updated fields.
@@ -174,18 +181,18 @@ paths:
       tags:
         - Searches
       parameters:
-      - in: query
-        name: latitude
-        schema:
-          type: number
-        required: true
-        description: Latitude value to search for.
-      - in: query
-        name: longitude
-        schema:
-          type: number
-        required: true
-        description: Longitude value to search for.
+        - in: query
+          name: latitude
+          schema:
+            type: number
+          required: true
+          description: Latitude value to search for.
+        - in: query
+          name: longitude
+          schema:
+            type: number
+          required: true
+          description: Longitude value to search for.
       description: Search for a location using a WGS84 coordinate pair (latitude and longitude).
       responses:
         "200":
